--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -1,6 +1,6 @@
 $font: "Avenir Next", Avenir, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, sans-serif;
 $text: #fff;
-$link: #4a90e2;
+$link: #5C9FED;
 $black: #222;
 $space: 20px;
 
@@ -43,13 +43,13 @@ body {
 
 
 h1 {
-  font-size: 3.4em;
+  font-size: 3em;
   font-weight: 200;
   line-height: 1.2;
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 1.8em;
   font-weight: 200;
 }
 
