--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,5 +8,6 @@
 @import "sass/base";
 @import "sass/helpers";
 @import "sass/layout";
+@import "sass/columns";
 @import "sass/responsive";
 @import "sass/footer";
