--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -49,16 +49,23 @@
 
 
 
+
 // padding
 .padding--top-bottom-one-space {
   padding: $space 0;
 }
 
+.padding--top-half-space {
+  padding-top: $space / 2;
+}
 .padding--top-one-space {
   padding-top: $space;
 }
 .padding--top-two-spaces {
   padding-top: $space * 2;
+}
+.padding--top-four-spaces {
+  padding-top: $space * 14;
 }
 
 .padding--bottom-one-space {
@@ -83,12 +90,19 @@
 .margin--top-bottom-two-spaces {
   margin: $space * 2 0;
 }
-
-.margin--top-four-spaces {
+.margin--top-bottom-four-spaces {
   margin: $space * 4 0;
 }
 
-
+.margin--top-two-spaces {
+  margin-top: $space * 2;
+}
+.margin--top-four-spaces {
+  margin-top: $space * 4;
+}
+.margin--top-six-spaces {
+  margin-top: $space * 6;
+}
 
 
 
