--- a/styles/style.css
+++ b/styles/style.css
@@ -770,20 +770,22 @@ small {
 
 .text--bigger {
   font-size: 1.125em;
+  -webkit-font-smoothing: antialiased;
+  font-weight: 500;
 }
 
 ::-moz-selection {
-  background: #5C9FED;
+  background: #53FACE;
   color: #222;
 }
 
 ::selection {
-  background: #5C9FED;
+  background: #53FACE;
   color: #222;
 }
 
 a {
-  color: #5C9FED;
+  color: #53FACE;
   text-decoration: none;
   -moz-transition: color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   -o-transition: color 0.2s ease-in-out, opacity 0.2s ease-in-out;
@@ -791,7 +793,7 @@ a {
   transition: color 0.2s ease-in-out, opacity 0.2s ease-in-out;
 }
 a:hover {
-  color: #7cb2f0;
+  color: #75fbd7;
   text-decoration: underline;
 }
 a:focus {
@@ -845,6 +847,19 @@ a:focus {
   clear: both;
 }
 
+.opacity--50 {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  opacity: 0.5;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.opacity--50:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+}
+
 .horizontal--center {
   margin: 0 auto;
 }
@@ -881,12 +896,20 @@ a:focus {
   padding: 20px 0;
 }
 
+.padding--top-half-space {
+  padding-top: 10px;
+}
+
 .padding--top-one-space {
   padding-top: 20px;
 }
 
 .padding--top-two-spaces {
   padding-top: 40px;
+}
+
+.padding--top-four-spaces {
+  padding-top: 280px;
 }
 
 .padding--bottom-one-space {
@@ -909,8 +932,20 @@ a:focus {
   margin: 40px 0;
 }
 
-.margin--top-four-spaces {
+.margin--top-bottom-four-spaces {
   margin: 80px 0;
+}
+
+.margin--top-two-spaces {
+  margin-top: 40px;
+}
+
+.margin--top-four-spaces {
+  margin-top: 80px;
+}
+
+.margin--top-six-spaces {
+  margin-top: 120px;
 }
 
 .download-button {
@@ -929,6 +964,50 @@ a:focus {
   -moz-box-shadow: 0 0 18px 1px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0 0 18px 1px rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 18px 1px rgba(0, 0, 0, 0.3);
+}
+
+.columns--3 > * {
+  width: 29.16667%;
+  display: inline-block;
+  vertical-align: top;
+}
+.columns--3 > *:nth-child(n) {
+  margin-right: 5%;
+  margin-bottom: 2.5%;
+}
+.columns--3 > *:nth-child(3n), .columns--3 > *:last-child {
+  margin-right: 0;
+  margin-bottom: 0;
+}
+@media (max-width: 850px) {
+  .columns--3 > * {
+    width: 47.25%;
+  }
+  .columns--3 > *:nth-child(n) {
+    margin-right: 3%;
+    margin-bottom: 1.5%;
+  }
+  .columns--3 > *:nth-child(2n), .columns--3 > *:last-child {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+  .columns--3 > *:not(:last-child) {
+    padding-bottom: 60px;
+  }
+}
+@media (max-width: 380px) {
+  .columns--3 > * {
+    width: 97.5%;
+    padding-bottom: 3%;
+  }
+  .columns--3 > *:nth-child(n) {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+  .columns--3 > *:nth-child(1n), .columns--3 > *:last-child {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
 }
 
 @media all and (min-width: 1200px) {
@@ -973,7 +1052,11 @@ a:focus {
   }
 
   h2 {
-    font-size: 1.1em;
+    font-size: 1.2em;
+  }
+
+  .text--bigger {
+    line-height: 1.4;
   }
 
   .width--60,
@@ -998,17 +1081,23 @@ a:focus {
     border-radius: 10px;
   }
 
-  .margin--top-four-spaces {
+  .margin--top-four-spaces,
+  .margin--top-six-spaces {
     margin-top: 20px;
   }
 
   .padding--left-one-space {
     padding-left: 10px;
   }
+
+  .float--right,
+  .float--left {
+    float: none;
+  }
 }
-@media all and (max-width: 375px) {
+@media all and (max-width: 380px) {
   a {
-    color: #12539e;
+    color: #05af82;
   }
 
   h1, h2 {
@@ -1018,16 +1107,4 @@ a:focus {
   .iphone-screenshot {
     width: 60%;
   }
-}
-footer {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
-  opacity: 0.6;
-  -moz-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-footer:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1;
 }
