--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -60,7 +60,7 @@
     font-size: 1.8em;
   }
   h2 {
-    font-size: 1.2em;
+    font-size: 1.3em;
   }
   .text--bigger {
     line-height: 1.4;
@@ -81,6 +81,10 @@
   .download-button {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .hide-on-mobile {
+    display: none;
   }
 
   // smaller app icon
@@ -121,5 +125,9 @@
   // smaller width for screenshot
   .iphone-screenshot {
     width: 60%;
+  }
+
+  .follow-link-footer {
+    display: block;
   }
 }
