--- a/styles/style.css
+++ b/styles/style.css
@@ -1052,7 +1052,7 @@ a:focus {
   }
 
   h2 {
-    font-size: 1.2em;
+    font-size: 1.3em;
   }
 
   .text--bigger {
@@ -1071,6 +1071,10 @@ a:focus {
   .download-button {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .hide-on-mobile {
+    display: none;
   }
 
   .show-on-mobile .appicon {
@@ -1106,5 +1110,9 @@ a:focus {
 
   .iphone-screenshot {
     width: 60%;
+  }
+
+  .follow-link-footer {
+    display: block;
   }
 }
