--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -67,6 +67,12 @@ small {
   font-weight: 500;
 }
 
+.text h2,
+.text p,
+.text li {
+  margin: $space / 2 0;
+}
+
 
 
 
@@ -99,4 +105,12 @@ a {
   &:focus {
     outline: none;
   }
+}
+
+
+
+
+
+ul {
+  margin-left: $space * 2;
 }
