--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -109,6 +109,13 @@
 
 
 
+// max-width for screenshot
+.iphone-screenshot {
+  max-width: 358px;
+}
+
+
+
 // download button
 .download-button {
   color: $text;
