--- a/styles/style.css
+++ b/styles/style.css
@@ -775,6 +775,7 @@ small {
 .text--bigger {
   font-size: 1.125em;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-weight: 500;
 }
 
