--- a/styles/style.css
+++ b/styles/style.css
@@ -870,6 +870,9 @@ ul {
 }
 
 .opacity--50 {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-stroke: 0.35px;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   opacity: 0.5;
   -moz-transition: all 0.2s ease-in-out;
