--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,5 +7,6 @@
 @import "sass/base";
 @import "sass/helpers";
 @import "sass/layout";
+@import "sass/navigation";
 @import "sass/columns";
 @import "sass/responsive";
