--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -9,6 +9,12 @@
 .vertical-align--middle {
   vertical-align: middle;
 }
+.vertical-align--neg-70 {
+  vertical-align: -70%;
+}
+.vertical-align--neg-15 {
+  vertical-align: -15%;
+}
 
 
 
@@ -17,6 +23,9 @@
 // blocks
 .block--inline {
   display: inline-block;
+}
+.block {
+  display: block;
 }
 
 
@@ -42,8 +51,14 @@
 .max-width--650 {
   max-width: 650px;
 }
+.width--70 {
+  width: 70%;
+}
 .width--60 {
   width: 60%;
+}
+.width--50 {
+  width: 50%;
 }
 .width--40 {
   width: 40%;
@@ -67,12 +82,15 @@
 .padding--top-two-spaces {
   padding-top: $space * 2;
 }
-.padding--top-four-spaces {
-  padding-top: $space * 14;
+.padding--top-six-spaces {
+  padding-top: $space * 6;
 }
 
 .padding--bottom-one-space {
   padding-bottom: $space;
+}
+.padding--bottom-four-spaces {
+  padding-bottom: $space * 4;
 }
 
 .padding--left-one-space {
@@ -82,11 +100,18 @@
   padding-left: $space * 2;
 }
 
+.padding--right-one-space {
+  padding-right: $space;
+}
+
 
 
 
 
 // margin
+.margin--bottom-four-spaces {
+  margin-bottom: $space * 4;
+}
 .margin--top-bottom-one-space {
   margin: $space 0;
 }
@@ -97,11 +122,20 @@
   margin: $space * 4 0;
 }
 
+.margin--top-half-space {
+  margin-top: $space / 2;
+}
+.margin--top-one-space {
+  margin-top: $space;
+}
 .margin--top-two-spaces {
   margin-top: $space * 2;
 }
 .margin--top-four-spaces {
   margin-top: $space * 4;
+}
+.margin--top-five-spaces {
+  margin-top: $space * 5;
 }
 .margin--top-six-spaces {
   margin-top: $space * 6;
@@ -112,16 +146,28 @@
 // max-width for screenshot
 .iphone-screenshot {
   max-width: 358px;
+  position: relative;
+
+  .iphone-screenshot__inside {
+    position: absolute;
+    bottom: 90px;
+    left: 24px;
+    width: 86.5%;
+    @include border-radius(4px);
+
+    &.iphone-screenshot__inside--video {
+      bottom: -80px;
+    }
+  }
 }
 
 
 
 // download button
-.download-button {
+.button {
   color: $text;
-  width: 200px;
   border: solid 2px #fff;
-  padding: $space / 2;
+  padding: $space / 1.5;
   display: block;
   text-align: center;
   @include border-radius(10px);
@@ -131,6 +177,14 @@
     color: $link;
     border-color: $link;
     text-decoration: none;
+  }
+
+  &.button--download {
+    width: 200px;
+  }
+
+  &.button--claim {
+    width: 260px;
   }
 }
 
