--- a/styles/sass/_helpers.scss
+++ b/styles/sass/_helpers.scss
@@ -101,3 +101,14 @@
 .opacity--70 {
   @include opacity(.7);
 }
+
+
+
+// for small button
+.border--1px {
+  text-transform: uppercase;
+  font-size: .75em;
+  padding: $space / 4 $space / 3;
+  border: solid 1px;
+  @include border-radius(4px);
+}
