--- a/styles/style.css
+++ b/styles/style.css
@@ -921,6 +921,16 @@ ul {
   opacity: 0.7;
 }
 
+.border--1px {
+  text-transform: uppercase;
+  font-size: .75em;
+  padding: 5px 6.66667px;
+  border: solid 1px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+}
+
 .fill-height-or-more {
   min-height: 100%;
   display: flex;
