--- a/styles/sass/_input.scss
+++ b/styles/sass/_input.scss
@@ -1,10 +1,12 @@
 .input {
   font-family: $font;
-  color: $black;
+  color: $text;
+  background: transparent;
   font-size: 1em;
   padding: $space / 4 $space / 2;
   outline: none;
   @include border-radius(4px);
-  border: none;
+  border: solid 1px #666;
   width: 260px;
+  margin: $space / 4 0;
 }
