--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -41,7 +41,8 @@
     font-size: 2.5em;
   }
   h2,
-  .text--h2 {
+  .text--h2,
+  h3 {
     font-size: 1.5em;
   }
 
@@ -207,7 +208,8 @@
   h1,
   h1 strong,
   h2,
-  .text--h2 {
+  .text--h2,
+  h3 {
     font-weight: 400;
   }
 
