--- a/styles/sass/_responsive.scss
+++ b/styles/sass/_responsive.scss
@@ -216,13 +216,13 @@
   // smaller width for screenshot
   .iphone-screenshot {
     width: 60%;
-    margin-left: -$space / 2;
+    // margin-left: -$space / 2;
 
     // video positioning
     .iphone-screenshot__inside--video {
-      width: 312px;
-      height: 552px;
-      bottom: 95px !important;
+      width: 176px;
+      left: 14px;
+      bottom: -235px !important;
     }
   }
 
