--- a/styles/sass/_helpers.scss
+++ b/styles/sass/_helpers.scss
@@ -121,3 +121,8 @@
   border: solid 1px;
   @include border-radius(4px);
 }
+
+// 25% opacity
+.border--opacity-25 {
+  border-color: rgba(255,255,255,.25);
+}
