--- a/styles/sass/_input.scss
+++ b/styles/sass/_input.scss
@@ -6,7 +6,8 @@
   padding: $space / 4 $space / 2;
   outline: none;
   @include border-radius(4px);
-  border: solid 1px #666;
+  border: solid 1px rgba(255,255,255,.25);
+  background: #161616;
   width: 260px;
   margin: $space / 4 0;
 }
