--- a/styles/style.css
+++ b/styles/style.css
@@ -945,6 +945,10 @@ ul {
   border-radius: 4px;
 }
 
+.border--opacity-25 {
+  border-color: rgba(255, 255, 255, 0.25);
+}
+
 .fill-height-or-more {
   min-height: 100%;
   display: flex;
@@ -1462,7 +1466,8 @@ nav .current {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  border: solid 1px #666;
+  border: solid 1px rgba(255, 255, 255, 0.25);
+  background: #161616;
   width: 260px;
   margin: 5px 0;
 }
