--- a/styles/style.css
+++ b/styles/style.css
@@ -775,7 +775,8 @@ h2 small,
   line-height: 1;
 }
 
-h3 {
+h3,
+.text--h3 {
   font-size: 1.4em;
   font-weight: 200;
   line-height: 1.6;
@@ -811,6 +812,22 @@ small {
 .text p,
 .text li {
   margin: 10px 0;
+}
+
+button {
+  background: transparent;
+  font-family: "Avenir Next", Avenir, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, sans-serif;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+  font-size: 1em;
+  border: none;
+  border-top: solid 1px rgba(255, 255, 255, 0.25);
+  border-bottom: solid 1px rgba(255, 255, 255, 0.25);
+  padding: 10px;
+}
+button:hover {
+  color: #53FACE;
 }
 
 ::-moz-selection {
@@ -1166,6 +1183,10 @@ ul {
   right: 0;
 }
 
+.sharing-container {
+  display: none;
+}
+
 nav {
   position: absolute;
   right: 0;
@@ -1468,6 +1489,6 @@ nav .current {
   border-radius: 4px;
   border: solid 1px rgba(255, 255, 255, 0.25);
   background: #161616;
-  width: 260px;
+  width: 270px;
   margin: 5px 0;
 }
