added fb in footer

--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -239,3 +239,13 @@
 .sharing-container {
   display: none;
 }
+
+
+
+// social icons
+.twitter-icon,
+.facebook-icon {
+  width: 20px;
+  padding-right: $space / 4;
+  vertical-align: -15%;
+}
