--- a/styles/sass/_helpers.scss
+++ b/styles/sass/_helpers.scss
@@ -66,7 +66,8 @@
 
 
 
-.no-link-colour {
+.no-link-colour,
+.no-link-colour.camden-fringe-colour {
   color: $text;
 }
 
@@ -125,4 +126,13 @@
 // 25% opacity
 .border--opacity-25 {
   border-color: rgba(255,255,255,.25);
+}
+
+// camden fringe colour
+.camden-fringe-colour {
+  color: $pink;
+
+  &:hover {
+    color: $pink;
+  }
 }
