Safari iPhone fix

--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -172,6 +172,7 @@
 .iphone-screenshot {
   max-width: 358px;
   position: relative;
+  display: block;
 
   .iphone-screenshot__inside {
     position: absolute;
