--- a/styles/style.css
+++ b/styles/style.css
@@ -782,7 +782,8 @@ h3,
   line-height: 1.6;
 }
 
-h1 strong {
+h1 strong,
+h2 strong {
   font-weight: 200;
 }
 
@@ -910,6 +911,18 @@ ul {
 
 .text--grey {
   color: #666;
+}
+
+.text--section {
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  padding: 10px 0;
+}
+
+.has-rectangle {
+  border: solid 1px #666;
+  padding: 5px 10px;
 }
 
 .no-link-colour,
@@ -1115,6 +1128,10 @@ ul {
   margin: 40px 0;
 }
 
+.margin--top-bottom-three-spaces {
+  margin: 60px 0;
+}
+
 .margin--top-bottom-four-spaces {
   margin: 80px 0;
 }
@@ -1129,6 +1146,10 @@ ul {
 
 .margin--top-two-spaces {
   margin-top: 40px;
+}
+
+.margin--top-three-spaces {
+  margin-top: 60px;
 }
 
 .margin--top-four-spaces {
@@ -1181,7 +1202,7 @@ ul {
   text-decoration: none;
 }
 .button.button--download {
-  width: 200px;
+  width: 260px;
 }
 .button.button--claim {
   width: 260px;
